--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
   - couchbase
 
 # faster builds on new travis setup not using sudo
-sudo: false
+sudo: true
 
 # cache vendor dirs
 cache:
