--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,6 @@ language: php
 php:
   - 7.0
 
-services:
-  - couchbase
-
 # faster builds on new travis setup not using sudo
 sudo: false
 
@@ -16,9 +13,9 @@ cache:
 
 before_install:
   - chmod +x ./tests/data/travis/couchbase-setup.sh
+  - sudo ./tests/data/travis/couchbase-setup.sh
 
 install:
-  - sudo tests/data/travis/couchbase-setup.sh
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require "fxp/composer-asset-plugin:^1.2.0"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
