--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
 
 before_install:
   - wget http://packages.couchbase.com/releases/4.6.2/couchbase-server-enterprise_4.6.2-ubuntu12.04_amd64.deb
-  - sudo dpkg -i couchbase-server-enterprise_4.6.2-ubuntu12.04_amd64.deb
+  - sudo -E dpkg -i couchbase-server-enterprise_4.6.2-ubuntu12.04_amd64.deb
   - rm -f couchbase-server-enterprise_4.6.2-ubuntu12.04_amd64.deb
 
 install:
