--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ addons:
     - python
 
 before_install:
-  - sudo ./tests/cochbase-setup.sh
-  
+  - sudo ./tests/couchbase-setup.sh
+
 install:
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require "fxp/composer-asset-plugin:^1.2.0"
