--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# phpstorm project files
 .idea
+
+# windows thumbnail cache
+Thumbs.db
+
+# composer vendor dir
+/vendor
+
+tests/_output/*
+tests/_support/_generated
+
+# vagrant runtime
+/.vagrant
+/*.log
+desktop.ini
