--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ install:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
 
 before_script:
-  - sudo sysctl vm.swappiness=0
   - wget http://packages.couchbase.com/releases/4.6.2/couchbase-server-enterprise_4.6.2-ubuntu14.04_amd64.deb
   - sudo dpkg -i couchbase-server-enterprise_4.6.2-ubuntu14.04_amd64.deb
   - wget http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-2-amd64.deb
@@ -32,6 +31,7 @@ before_script:
   - pecl install couchbase
   - /opt/couchbase/bin/couchbase-cli cluster-init -c 127.0.0.1:8091 --cluster-username=Administrator --cluster-password=Administrator --cluster-port=8091 --cluster-ramsize=2048 --cluster-index-ramsize=512 --services=data,index,query,fts
   - /opt/couchbase/bin/couchbase-cli bucket-create -c 127.0.0.1:8091 --bucket=default --bucket-type=couchbase --bucket-port=11211 --bucket-ramsize=256 -u Administrator -p Administrator
+  - composer install
 
 script:
   - phpunit --verbose $PHPUNIT_FLAGS
