--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ext-couchbase": "^2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.2.*"
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
         "psr-4": {
