--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,7 @@ before_script:
   - pecl install igbinary
   - pecl install couchbase
   - /opt/couchbase/bin/couchbase-cli cluster-init -c 127.0.0.1:8091 --cluster-init-username=Administrator --cluster-init-password=Administrator --cluster-init-port=8091 --cluster-init-ramsize=2048 --cluster-index-ramsize=512 --services=data,index,query
-  - sleep 10
-  #- /opt/couchbase/bin/couchbase-cli rebalance -c 127.0.0.1:8091 -u Administrator -p Administrator
+  - /opt/couchbase/bin/couchbase-cli rebalance -c 127.0.0.1:8091 -u Administrator -p Administrator
   - /opt/couchbase/bin/couchbase-cli bucket-create -c 127.0.0.1:8091 --bucket=yii2test --bucket-type=couchbase --bucket-port=11211 --bucket-ramsize=256 -u Administrator -p Administrator
   - /opt/couchbase/bin/cbq -c 127.0.0.1:8091 -u Administrator -p Administrator -s="CREATE PRIMARY INDEX ON \`yii2test\`"
   - wget https://phar.phpunit.de/phpunit.phar
