--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ sudo: required
 language: php
 
 php:
+  - 5.6
   - 7.0
+  - 7.1
+  - 7.2
 
 cache:
   directories:
@@ -16,7 +19,6 @@ addons:
 
 install:
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require "fxp/composer-asset-plugin:^1.2.0"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
 
 before_script:
@@ -37,7 +39,7 @@ before_script:
   - chmod +x phpunit.phar
   - sudo mv phpunit.phar /usr/local/bin/phpunit
   - /usr/local/bin/phpunit --version
-  - composer install
+  - composer install --no-ansi --no-dev --no-interaction --no-progress --no-scripts --optimize-autoloader
 
 script:
   - /usr/local/bin/phpunit --verbose $PHPUNIT_FLAGS
