--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "^2.0",
         "ext-couchbase": "^2.3"
+        "yiisoft/yii2": "^2.0.14",
     },
     "require-dev": {
         "php": ">=7.0",
