--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": "^2.0",
-        "ext-couchbase": "^2.3"
         "yiisoft/yii2": "^2.0.14",
+        "ext-couchbase": "^2.3",
+        "yiisoft/yii2-httpclient": "^2.0"
     },
     "require-dev": {
         "php": ">=7.0",
