--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": ">=2.0.14.0",
+        "yiisoft/yii2": "^2.0.14",
         "ext-couchbase": "^2.3"
     },
     "require-dev": {
